@@ -1,4 +1,3 @@
-FIXME svc -x doesn't work fully with log running
 expand rts
 document disk state diagram for a cyclic log in multilog
 use libtai local-time routines in tai64nlocal
